--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "tspr1",
+  "name": "ts-demo-project",
   "version": "1.0.0",
-  "description": "Цей репозиторій створений для демонстрації базових можливостей TypeScript.   У ньому налаштований компілятор, приклад простого коду та структура директорій для майбутнього проєкту.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.9.2"
+    "typescript": "^5.6.3"
   }
 }
+
